overflow fix

--- a/client/invenus/src/components/event-card/event-card.styles.scss
+++ b/client/invenus/src/components/event-card/event-card.styles.scss
@@ -10,10 +10,6 @@
 .event-card-title {
   padding-top: 15px;
   font-size: 1.5rem;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-  display: inline-block;
 }
 
 .event-card-image {
@@ -72,7 +68,7 @@
 }
 
 .event-club-information-card-description-align {
-  padding-left: 8px;
+  //padding-left: 8px;
 }
 
 
